working on (#9, #10) Question preview (when you click on “my questions”): share button - box too long (see issue 8 above re lesson intro) Question preview (click on “questions” and then choose a question) - other than pixel perfect comments (below), the buttons on the left of number of views,  likes,questions - overlap the question - they should be outside of box, same as in production.

--- a/app/styles/_questionPreview.scss
+++ b/app/styles/_questionPreview.scss
@@ -132,7 +132,8 @@
             border: 5px solid #C6C6C6;
             border-radius: 10px;
             padding: 10px;
-            width: 450px;
+            /*width: 305px;*/
+            width: 375px;
         }
         .hint {
             font-size: 20px;
@@ -206,7 +207,8 @@
                 color: white;
                 border-radius: 10px;
                 float: left;
-                width: 90px;
+                /*width: 90px;*/
+                width: 55px;
             }
             .stats-button-age {
                 background-color: #5fb9ff;
@@ -410,3 +412,11 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    #questionIntro .question .details {
+        padding: 0;
+    }
+    #questionIntro .question .question-preview {
+        width: 290px;
+    }
+}
